--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
     "version": 2,
-    "name": "ExploreEase: Effortless Travel and Accommodation",
     "builds": [
-       { "src": "app.js", "use": "@vercel/node" }
+       { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/app.js" }
+       { "src": "/(.*)", "dest": "/" }
     ]
  }
