--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "server-side",
   "version": "1.0.0",
   "description": "BackEnd for the ExploreEase Effortless Travel and Accommodation Project",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node -r dotenv/config --experimental-json-modules src/index.js"
+    "start": "node -r dotenv/config src/index.js"
   },
   "keywords": [
     "MERN",
